Task5/scripts/part/admin-back-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
  namespace: smart-devices
spec:
  selector:
    app: admin-back-end-api
    role: admin-back-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
