Task5/scripts/part/admin-front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-app
  namespace: smart-devices
spec:
  selector:
    app: admin-front-end
    role: admin-front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
