Task5/scripts/part/back-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-app
  namespace: smart-devices
spec:
  selector:
    app: back-end-api
    role: back-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
