Task5/scripts/part/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
  namespace: smart-devices
spec:
  selector:
    app: front-end
    role: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
