Task5/scripts/part/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: smart-devices
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
